// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BuildStageSpecifications tests clicking on description shows corresponding inputs 1`] = `
<div>
  <div
    class="wrapper"
  >
    <div
      class="contentSection"
    >
      <div
        class="OverlaySpinner--overlaySpinner"
      >
        <div
          class="tabHeading"
          id="stageDetails"
        >
          stageDetails
        </div>
        <div
          class="bp3-card bp3-elevation-0 Card--card sectionCard"
        >
          <form
            class="FormikForm--main"
          >
            <div>
              <div
                class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
              >
                <div
                  class="InputWithIdentifier--txtNameContainer TextInput--main"
                >
                  <div
                    class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                  >
                    <p
                      class="StyledProps--font StyledProps--main"
                    >
                      ID
                      :
                    </p>
                    <span
                      class="bp3-popover-wrapper"
                    >
                      <span
                        class="bp3-popover-target"
                      >
                        <div
                          class="bp3-editable-text bp3-disabled InputWithIdentifier--idValue"
                        >
                          <span
                            class="bp3-editable-text-content"
                            style="height: 1px; line-height: 1px; min-width: 0;"
                          >
                            BuildStage
                          </span>
                        </div>
                      </span>
                    </span>
                  </div>
                  <div
                    class="bp3-form-group fields"
                    data-id="name-0"
                  >
                    <label
                      class="bp3-label"
                      for="name"
                    >
                      <span
                        class="Tooltip--acenter"
                        data-tooltip-id="ciBuildStage_name"
                      >
                        stageNameLabel
                      </span>
                       
                      <span
                        class="bp3-text-muted"
                      />
                    </label>
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="bp3-input-group"
                      >
                        <input
                          autocomplete="off"
                          class="bp3-input"
                          name="name"
                          placeholder="pipeline.aboutYourStage.stageNamePlaceholder"
                          type="text"
                          value="BuildStage"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="addDataLinks"
                />
              </div>
              <div
                class="fields"
              >
                <span
                  class="removeLink"
                >
                  removeLabel
                </span>
                <div
                  class="bp3-form-group"
                >
                  <label
                    class="bp3-label"
                    for="description"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="ciBuildStage_description"
                    >
                      description
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <textarea
                      autocomplete="off"
                      class="bp3-input bp3-fill"
                      maxlength="1024"
                      name="description"
                    />
                  </div>
                </div>
              </div>
              <label
                class="bp3-control bp3-switch StyledProps--font Switch--switch StyledProps--main"
              >
                <input
                  type="checkbox"
                />
                <span
                  class="bp3-control-indicator"
                />
                cloneCodebaseLabel
              </label>
            </div>
          </form>
        </div>
        <div
          class="tabHeading"
          id="sharedPaths"
        >
          pipelineSteps.build.stageSpecifications.sharedPaths
        </div>
        <div
          class="bp3-card bp3-elevation-0 Card--card sectionCard"
        >
          <form
            class="FormikForm--main fields contentCard"
          >
            <div>
              <div
                class="group withoutSpacing"
              >
                <div
                  class="bp3-form-group"
                  data-id="sharedPaths-0"
                  style="flex-grow: 1; margin-bottom: 0px;"
                >
                  <label
                    class="bp3-label"
                    for="sharedPaths"
                  >
                    <div
                      class="formLabel"
                    >
                      <p
                        class="StyledProps--font StyledProps--main"
                        style="display: flex; align-items: center; min-width: 171px;"
                      >
                        pipelineSteps.build.stageSpecifications.sharedPaths
                        <span
                          class="bp3-popover-wrapper"
                        >
                          <span
                            class="bp3-popover-target"
                          >
                            <button
                              class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
                              tabindex="0"
                              type="button"
                            >
                              <span
                                class="bp3-icon StyledProps--main"
                                data-icon="question"
                              >
                                <svg
                                  height="14"
                                  viewBox="0 0 14 14"
                                  width="14"
                                >
                                  <path
                                    d="M7 .1C3.2.1.1 3.2.1 7s3.1 6.9 6.9 6.9 6.9-3.1 6.9-6.9S10.8.1 7 .1zm0 1.2c3.2 0 5.7 2.6 5.7 5.7s-2.6 5.7-5.7 5.7S1.3 10.2 1.3 7 3.8 1.3 7 1.3zm0 2.3c-1.3 0-2.3 1-2.3 2.3h1.1c0-.6.5-1.1 1.1-1.1S8 5.3 8 5.9c0 .4-.3.8-.7 1h-.1c-.4.2-.8.6-.8 1.1v.7h1.1V8l.2-.1c.9-.3 1.5-1.1 1.5-2.1.1-1.2-.9-2.2-2.2-2.2zm-.6 5.7v1.1h1.1V9.3H6.4z"
                                    fill="#9AA5B5"
                                  />
                                </svg>
                              </span>
                            </button>
                          </span>
                        </span>
                      </p>
                      <div
                        class="bp3-popover-wrapper typeSelectorWrapper"
                      >
                        <div
                          class="bp3-popover-target typeSelector"
                        >
                          <button
                            class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main btn Button--with-current-color Button--iconOnly Button--without-shadow"
                            type="button"
                          >
                            <span
                              class="bp3-button-text"
                            >
                              <span
                                class="bp3-icon StyledProps--main icon fixed"
                                data-icon="fixed-input"
                              >
                                <svg
                                  height="12"
                                  viewBox="0 0 9 9"
                                  width="12"
                                >
                                  <path
                                    d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                    fill="currentColor"
                                  />
                                </svg>
                              </span>
                              <span
                                class="btnText"
                              >
                                inputTypes.FIXED
                              </span>
                            </span>
                          </button>
                        </div>
                      </div>
                    </div>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-card bp3-elevation-0 Card--card"
                      style="width: 100%;"
                    >
                      <button
                        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--without-shadow"
                        data-testid="add-sharedPaths"
                        type="button"
                      >
                        <span
                          class="bp3-button-text"
                        >
                          plusAdd
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </form>
        </div>
        <div
          class="Accordion--accordion accordionTitle"
        >
          <div
            class="Accordion--panel"
            data-open="true"
            data-testid="advanced-panel"
            id="advanced-panel"
          >
            <div
              class="Accordion--summary"
              data-testid="advanced-summary"
            >
              <div
                class="Accordion--chevron"
              />
              <div
                class="Accordion--label"
              >
                Advanced
              </div>
            </div>
            <div
              class="bp3-collapse Accordion--collapse"
              style="height: auto; overflow-y: visible; transition: none;"
            >
              <div
                aria-hidden="false"
                class="bp3-collapse-body"
                style="transform: translateY(0); transition: none;"
              >
                <div
                  class="Accordion--details"
                  data-testid="advanced-details"
                >
                  <div
                    class="bp3-card bp3-elevation-0 Card--card sectionCard"
                    id="variables"
                  >
                    <div
                      class="tabSubHeading"
                    >
                      Stage Variables
                    </div>
                    <div
                      class="Layout--horizontal StyledProps--main"
                    >
                      <div
                        class="stageSection"
                      >
                        <div
                          class="stageDetails"
                        >
                          <div>
                            {"a":"a","variables":[],"canAddVariable":true}
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="navigationButtons"
      />
    </div>
  </div>
</div>
`;

exports[`BuildStageSpecifications tests renders correctly 1`] = `
<div>
  <div
    class="wrapper"
  >
    <div
      class="contentSection"
    >
      <div
        class="OverlaySpinner--overlaySpinner"
      >
        <div
          class="tabHeading"
          id="stageDetails"
        >
          stageDetails
        </div>
        <div
          class="bp3-card bp3-elevation-0 Card--card sectionCard"
        >
          <form
            class="FormikForm--main"
          >
            <div>
              <div
                class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
              >
                <div
                  class="InputWithIdentifier--txtNameContainer TextInput--main"
                >
                  <div
                    class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                  >
                    <p
                      class="StyledProps--font StyledProps--main"
                    >
                      ID
                      :
                    </p>
                    <span
                      class="bp3-popover-wrapper"
                    >
                      <span
                        class="bp3-popover-target"
                      >
                        <div
                          class="bp3-editable-text bp3-disabled InputWithIdentifier--idValue"
                        >
                          <span
                            class="bp3-editable-text-content"
                            style="height: 1px; line-height: 1px; min-width: 0;"
                          >
                            BuildStage
                          </span>
                        </div>
                      </span>
                    </span>
                  </div>
                  <div
                    class="bp3-form-group fields"
                    data-id="name-0"
                  >
                    <label
                      class="bp3-label"
                      for="name"
                    >
                      <span
                        class="Tooltip--acenter"
                        data-tooltip-id="ciBuildStage_name"
                      >
                        stageNameLabel
                      </span>
                       
                      <span
                        class="bp3-text-muted"
                      />
                    </label>
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="bp3-input-group"
                      >
                        <input
                          autocomplete="off"
                          class="bp3-input"
                          name="name"
                          placeholder="pipeline.aboutYourStage.stageNamePlaceholder"
                          type="text"
                          value="BuildStage"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="addDataLinks"
                >
                  <button
                    class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--without-shadow"
                    type="button"
                  >
                    <span
                      class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
                      icon="plus"
                    >
                      <svg
                        data-icon="plus"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          plus
                        </desc>
                        <path
                          d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                    <span
                      class="bp3-button-text"
                    >
                      pipelineSteps.build.stageSpecifications.addDescription
                    </span>
                  </button>
                </div>
              </div>
              
              <label
                class="bp3-control bp3-switch StyledProps--font Switch--switch StyledProps--main"
              >
                <input
                  type="checkbox"
                />
                <span
                  class="bp3-control-indicator"
                />
                cloneCodebaseLabel
              </label>
            </div>
          </form>
        </div>
        <div
          class="tabHeading"
          id="sharedPaths"
        >
          pipelineSteps.build.stageSpecifications.sharedPaths
        </div>
        <div
          class="bp3-card bp3-elevation-0 Card--card sectionCard"
        >
          <form
            class="FormikForm--main fields contentCard"
          >
            <div>
              <div
                class="group withoutSpacing"
              >
                <div
                  class="bp3-form-group"
                  data-id="sharedPaths-0"
                  style="flex-grow: 1; margin-bottom: 0px;"
                >
                  <label
                    class="bp3-label"
                    for="sharedPaths"
                  >
                    <div
                      class="formLabel"
                    >
                      <p
                        class="StyledProps--font StyledProps--main"
                        style="display: flex; align-items: center; min-width: 171px;"
                      >
                        pipelineSteps.build.stageSpecifications.sharedPaths
                        <span
                          class="bp3-popover-wrapper"
                        >
                          <span
                            class="bp3-popover-target"
                          >
                            <button
                              class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
                              tabindex="0"
                              type="button"
                            >
                              <span
                                class="bp3-icon StyledProps--main"
                                data-icon="question"
                              >
                                <svg
                                  height="14"
                                  viewBox="0 0 14 14"
                                  width="14"
                                >
                                  <path
                                    d="M7 .1C3.2.1.1 3.2.1 7s3.1 6.9 6.9 6.9 6.9-3.1 6.9-6.9S10.8.1 7 .1zm0 1.2c3.2 0 5.7 2.6 5.7 5.7s-2.6 5.7-5.7 5.7S1.3 10.2 1.3 7 3.8 1.3 7 1.3zm0 2.3c-1.3 0-2.3 1-2.3 2.3h1.1c0-.6.5-1.1 1.1-1.1S8 5.3 8 5.9c0 .4-.3.8-.7 1h-.1c-.4.2-.8.6-.8 1.1v.7h1.1V8l.2-.1c.9-.3 1.5-1.1 1.5-2.1.1-1.2-.9-2.2-2.2-2.2zm-.6 5.7v1.1h1.1V9.3H6.4z"
                                    fill="#9AA5B5"
                                  />
                                </svg>
                              </span>
                            </button>
                          </span>
                        </span>
                      </p>
                      <div
                        class="bp3-popover-wrapper typeSelectorWrapper"
                      >
                        <div
                          class="bp3-popover-target typeSelector"
                        >
                          <button
                            class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main btn Button--with-current-color Button--iconOnly Button--without-shadow"
                            type="button"
                          >
                            <span
                              class="bp3-button-text"
                            >
                              <span
                                class="bp3-icon StyledProps--main icon fixed"
                                data-icon="fixed-input"
                              >
                                <svg
                                  height="12"
                                  viewBox="0 0 9 9"
                                  width="12"
                                >
                                  <path
                                    d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                    fill="currentColor"
                                  />
                                </svg>
                              </span>
                              <span
                                class="btnText"
                              >
                                inputTypes.FIXED
                              </span>
                            </span>
                          </button>
                        </div>
                      </div>
                    </div>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-card bp3-elevation-0 Card--card"
                      style="width: 100%;"
                    >
                      <button
                        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--without-shadow"
                        data-testid="add-sharedPaths"
                        type="button"
                      >
                        <span
                          class="bp3-button-text"
                        >
                          plusAdd
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </form>
        </div>
        <div
          class="Accordion--accordion accordionTitle"
        >
          <div
            class="Accordion--panel"
            data-open="true"
            data-testid="advanced-panel"
            id="advanced-panel"
          >
            <div
              class="Accordion--summary"
              data-testid="advanced-summary"
            >
              <div
                class="Accordion--chevron"
              />
              <div
                class="Accordion--label"
              >
                Advanced
              </div>
            </div>
            <div
              class="bp3-collapse Accordion--collapse"
              style="height: auto; overflow-y: visible; transition: none;"
            >
              <div
                aria-hidden="false"
                class="bp3-collapse-body"
                style="transform: translateY(0); transition: none;"
              >
                <div
                  class="Accordion--details"
                  data-testid="advanced-details"
                >
                  <div
                    class="bp3-card bp3-elevation-0 Card--card sectionCard"
                    id="variables"
                  >
                    <div
                      class="tabSubHeading"
                    >
                      Stage Variables
                    </div>
                    <div
                      class="Layout--horizontal StyledProps--main"
                    >
                      <div
                        class="stageSection"
                      >
                        <div
                          class="stageDetails"
                        >
                          <div>
                            {"a":"a","variables":[],"canAddVariable":true}
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="navigationButtons"
      />
    </div>
  </div>
</div>
`;
